--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
+
+html{
+  background-color: #F4F4F4;
+  font-size: 62.5%;
+}
+
+p{
+  font-size: 15px;
+}
+
+
+/* Header */
+.button {
+  display       : inline-block;
+  border-radius : 5%;          
+  font-size     : 14pt;        
+  text-align    : center;      
+  cursor        : pointer;     
+  padding       : 12px 13px;   
+  background    : #000066;     
+  color         : #ffffff;     
+  line-height   : 1em;         
+  transition    : .3s;         
+  border        : 2px solid #000066;    
+  margin-left: 10px;
+}
+.button:hover {
+  color         : #000066;     
+  background    : #ffffff;     
+}
+.headerList{
+  text-align: right;
+}
+
+/* Main */
+
+.titleInput{
+  position: relative;
+	width: 80%;
+	margin: 40px 3%;
+  font: 15px/24px sans-serif;
+	box-sizing: border-box;
+	padding: 0.3em;
+	transition: 0.3s;
+	letter-spacing: 1px;
+	color: #aaaaaa;
+	border: none;
+	border-bottom: 2px solid #1b2538;
+	background: transparent;
+}
+
+.labelTitleInput input[type='text']:focus {
+	border-bottom: 2px solid #000066;
+	outline: none;
+}
+
+.deadline{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* ItemList */
+p{
+  display: inline-block;
 }
