--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ h2 {
 .wrapper {
   height: 100vh;
   padding-top: 10vh;
-  background: var(--cl--gray);
+  background: #e8e7e7;
 }
 
 .auth-container {
@@ -106,12 +106,12 @@ h2 {
 .titleInput {
   width: 70%;
   margin: 3vh 15%;
-  font-size: var(--font--size--h2);
+  font-size: 1.8rem;
   box-sizing: border-box;
   padding: 0.6em;
   transition: 0.3s;
   letter-spacing: 1px;
-  background-color: var(--cl--gray);
+  background-color: #e8e7e7;
 }
 
 input[type="text"]:focus {
@@ -120,13 +120,13 @@ input[type="text"]:focus {
 }
 
 /* Deadline */
-.deadline {
+/* .deadline {
   margin: 3.5vh 15% 0 15%;
   display: flex;
-}
-.deadline label {
+} */
+/* .deadline label {
   width: 7%;
-}
+} */
 
 .DatePicker {
   justify-content: center;
