--- a/src/App.css
+++ b/src/App.css
@@ -83,41 +83,12 @@ h2 {
   text-align: center;
 }
 
-/* Header */
-
-.headerList h1 {
-  text-align: center;
-  font-size: var(--font--size--h1);
-  padding-bottom: 1.5vh;
-  color: #ffffff;
-}
-.headerList {
-  background: -moz-linear-gradient(bottom, #a4a4e5, #fff);
-  background: -webkit-linear-gradient(bottom, #a4a4e5, #fff);
-  background: linear-gradient(to top, #a4a4e5, 80%, #fff);
-}
-.headerBtn {
-  padding: 10vh 0 0 10vh;
-}
-
 /* Main */
 /* Title */
-
-.titleInput {
-  width: 70%;
-  margin: 3vh 15%;
-  font-size: 1.8rem;
-  box-sizing: border-box;
-  padding: 0.6em;
-  transition: 0.3s;
-  letter-spacing: 1px;
-  background-color: #e8e7e7;
-}
-
-input[type="text"]:focus {
+/* input[type="text"]:focus {
   border-bottom: 2px solid #000066;
   outline: none;
-}
+} */
 
 .DatePicker {
   justify-content: center;
@@ -199,15 +170,6 @@ span {
 }
 .listBody td {
   font-size: var(--font--size--p);
-}
-
-/* SaveBtn */
-
-.saveBtnContainer {
-  text-align: right;
-  padding-right: 20px;
-  margin-top: 2vh;
-  margin-right: 10%;
 }
 
 /* 一覧ページ */
